# spurGearGenerator

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
config/: example_config.json  example_config_results.json  leggy_config.json  leggy_config_results.json
config/solutions/leggy_config/1/: prod.txt  solution.txt
config/solutions/leggy_config/9/: prod.txt  solution.txt
src/spurGearGenerator/: __init__.py  cli.py  gear_math.py  generate.py  materials.py  models.py  onshape.py  production.py  solver.py  tooth_profile.py
tests/: test_cli.py  test_gear_math.py  test_generate.py  test_materials.py  test_models.py  test_onshape.py  test_production.py  test_solver.py  test_tooth_profile.py
tests/fixtures/sample_configs/: basic.json  two_stage.json
