[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spurGearGenerator"
version = "0.1.0"
description = "CLI tool to find spur gear gearbox solutions from JSON configuration files"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "tabulate>=0.9.0",
    "tqdm>=4.60.0",
]

[project.scripts]
spurGearGenerator = "spurGearGenerator.cli:main"
sgg = "spurGearGenerator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "flake8",
    "mypy",
]
